changed background color

--- a/src/index.css
+++ b/src/index.css
@@ -1,149 +1,141 @@
- @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins&display=swap');
-:root{
-  font-family: 'Montserrat', sans-serif;
-  color:  #003048;
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins&family=Roboto+Mono&display=swap");
+:root {
+  font-family: "Montserrat", sans-serif;
+  color: #003048;
 }
-button{
-
+button {
   background-color: #f67f20;
   color: white;
   border: none;
 }
-.home-page{
-  background-image: url(./Velio/Velio_bg.jpg);
-}
-.navigation-bars{
+
+.navigation-bars {
   display: flex;
   flex-direction: column;
 }
 
-.side-bar{
-  position: fixed;
-font-size: 15px;
-font-weight: 500;
-line-height: 18px;
-letter-spacing: 0em;
-color:  #003048;
-background-color: white;
+.side-bar {
+  /* position: fixed; */
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 18px;
+  color: #003048;
+  background-color: whitesmoke;
 
-width: 20%;
-height: 70vh;
+  width: 15%;
+  height: 70vh;
 
-margin-left: 2%;
-margin-top: 5%;
-
-
-display: flex;
-justify-content: space-between;
-flex-direction: column;
-align-content: center;
-
-border-right: 1px solid #003048;
-
-
-}
-
-.side-bar span:hover{
-  cursor: pointer;
-  transform: scale(1.4);  
-  
-}
-.navbar{
-  width: 75vw;
-  margin-left: auto;
-  background-image: url(./Velio/Velio_bg.jpg);
-  margin-right: 2%;
-  position: fixed;
-}
-
-section{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  flex-direction: column;
+  text-align: center;
+
+  border-right: 1px solid #003048;
+}
+
+.side-bar span:hover {
+  cursor: pointer;
+  transform: scale(1.4);
+}
+.navbar {
+  position: fixed;
+}
+
+section {
+  display: flex;
+  justify-content: space-around;
   width: 100%;
 }
-h1{
-  color: #f67f20;
+.section-1 {
+  background-color: #003048;
 }
-.menu-icon{
-  visibility: hidden;
+.text-logo {
+  color: #f67f20;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  font-family: "Roboto Mono", monospace;
+  font-weight: 300;
+  margin-right: auto;
+}
+.menu-icon {
+  display: none;
 }
 
-.user-image{
+.user-image {
   margin-top: auto;
   margin-bottom: auto;
 }
-.icons{
+.icons {
   color: white;
   width: 27px;
   height: 27px;
   margin: 10px;
 }
-.Add-button{
+.logo {
+  fill: #f67f20;
+}
+.Add-button {
   background-color: #ff4c4b;
   border-radius: 10px 10px 7px 30px;
-
-
 }
-.edit-button{
+.edit-button {
   background-color: #0ad065;
   border-radius: 20px 20px 50px 50px;
 }
-.delete-button{
+.delete-button {
   background-color: #ff923c;
   border-radius: 20px 20px 50px 50px;
 }
-.share-button{
+.share-button {
   background-color: #0ad065;
   border-radius: 20px 20px 50px 50px;
 }
-.scan-button{
+.scan-button {
   width: min-content;
   background-color: #5e8bff;
   border-radius: 20px 20px 50px 50px;
 }
-.settings-button{
+.settings-button {
   width: min-content;
   background-color: #65f5fe;
   border-radius: 15px 12px 30px 7px;
 }
-.startup{
-  font-family: 'Poppins', sans-serif;
+.startup {
+  font-family: "Poppins", sans-serif;
   width: 50vw;
   margin: 10% auto;
 }
-.image-wrapper{
+.image-wrapper {
   padding: auto;
 }
-.welcome-message{
+.welcome-message {
   background-color: white;
   /* opacity: 5; */
 }
 
-.login-options{
+.login-options {
   background-image: url(./Velio/Velio_bg.jpg);
   width: 40%;
   margin: auto;
   display: flex;
   justify-content: space-around;
 }
-.login-wrapper{
+.login-wrapper {
   width: 45%;
 }
-.have-account{
+.have-account {
   text-align: right;
 }
 
-@media  (max-width:480px) {
-  .side-bar{
+@media (max-width: 480px) {
+  .side-bar {
     display: none;
   }
-  .navbar{
+  .navbar {
     width: 100%;
   }
-  .menu-icon{
+  .menu-icon {
     visibility: visible;
     fill: #f67f20;
   }
- 
 }
