--- a/src/components/Startup/Startup.css
+++ b/src/components/Startup/Startup.css
@@ -7,17 +7,20 @@
 }
 .setup {
   width: 368px;
-  height: 440px;
+  height: 540px;
   background-image: url(../../Velio/Velio_bg.jpg);
   margin: auto;
+  margin-top: 20vh;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+ 
 }
-.post-box {
+.mail-box {
   width: 100%;
   height: 308px;
   border-radius: 0 0 55px 55px;
+  /* margin-bottom: 20px; */
 }
 p {
   color: rgba(0, 48, 72, 1);
@@ -29,16 +32,16 @@ p {
 .signup-text {
   color: rgba(246, 127, 32, 1);
   margin-top: 40px;
+  text-decoration: none;
 }
 .have-account {
   text-align: right;
   width: 80%;
 }
-/* .login-alt {
-  padding: 40px;
-} */
+
 .login-button {
   padding: 10px 35px;
   border-radius: 15px;
   font-weight: bolder;
+  box-shadow: 2px 3px #dcdcdc;
 }
