--- a/src/components/Login/register/Login.css
+++ b/src/components/Login/register/Login.css
@@ -1,10 +1,8 @@
 .login{
     display: flex;
-    /* padding: auto; */
     margin-left: 25%;
-    /* margin-right: 25% ; */
     margin-top: 10%; 
-    /* margin: 20%; */
+    
 
 
 }
@@ -33,7 +31,6 @@ input{
 }
 .email{
     width: 80%;
-    /* margin-top: 40px; */
     margin-bottom: 40px;
 }
 .password{
@@ -52,4 +49,11 @@ input{
 }
 .alt_register{
     margin: auto;
+}
+.have-account{
+    width: max-content;
+    text-align: center;
+    /* margin: auto; */
+    margin-left: -5%;
+    
 }
