--- a/src/index.css
+++ b/src/index.css
@@ -3,19 +3,55 @@
   font-family: "Montserrat", sans-serif;
   color: #003048;
 }
+*{
+  background-color: #F7F8FD;
+}
+
 button {
   background-color: #f67f20;
   color: white;
   border: none;
 }
-
-.navigation-bars {
+nav{
+  background-color: #ffff;
+  height: 20vh;
+  color: #f67f20;
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
+  align-content: center;
+  
+  
 }
+.logo{
+  height: max-content;
+  background-color: #ffff;
+  align-self: center;
+}
+.add{
+  height: max-content;
+  align-self: center;
+  background-color: #003048;
+  color: #ffff;
+  text-align: center;
+  padding: 20px;
+  border-radius: 20px;
+}
+.searchbar{
+  background-color: #F7F8FD;
+  height: fit-content;
+  border: #003048 1px solid;
+  display: flex;
+  justify-content: space-between;
+  align-self: center;
+}
+.search-input{
+  border: none;
+  background-color: #F7F8FD;
+}
+/*
 
 .side-bar {
-  /* position: fixed; */
+
   font-size: 15px;
   font-weight: 500;
   line-height: 18px;
@@ -120,3 +156,4 @@ section {
 a{
   text-decoration: none;
 }
+ */
