--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   --grey: #b8b7bc;
   --dark-blue: #020125;
   --green-color: #014e56;
+  --light-green: #aeefae;
   --pink: #f67e7e;
   --white: #fff;
   --dark-green: #004047;
@@ -20,17 +21,20 @@ body {
 h1,
 h2,
 h3,
-h4,
 .heading {
   color: var(--dark-blue);
   font-weight: 700;
   font-size: 64px;
 }
-
-form {
+h4,p{
+  font-size: 16px;
+  color: var(--white);
+}
+form, .text-input {
   width: max-content;
   background-color: var(--green-color);
   display: flex;
+  flex-direction: column;
   height: 100%;
   margin: auto;
   margin-top: 40px;
@@ -48,6 +52,7 @@ label {
 }
 .heading {
   color: var(--white);
+  margin: auto;
 }
 h2 {
   margin: auto;
@@ -56,35 +61,30 @@ input {
   font-size: 0.94rem;
   padding: 0.5rem 0.8rem;
   font-weight: 600;
-  font-style: italic;
   line-height: 1.56rem;
 
   letter-spacing: -0.115385px;
-  color: var(--white);
   height: 17px;
   border: none;
-  border-bottom: 1px solid var(--white);
-  background: none;
+  
 }
 input:focus {
   border: 1px solid white;
   border: none;
-  border-bottom: 1px solid var(--pink);
   outline: none;
-  color: var(--pink);
+  color: var(--white);
 }
 .input-container {
-  margin-top: 24px;
+  margin-top: 54px;
+  overflow-x: hidden;
 }
 label {
   color: var(--white);
 }
-.form-group-first {
-  margin-top: 40px;
+.form-group-first,.form-group-last {
+  margin-top: 54px;
 }
-.form-group-last {
-  margin-top: 40px;
-}
+
 .btn {
   color: var(--dark-green);
   padding: 0.6rem 2rem;
@@ -96,33 +96,42 @@ label {
   letter-spacing: 0px;
 
   background: var(--white);
-  border: 2px solid #ffffff;
   border-radius: 24px;
   cursor: pointer;
-  margin-top: 24px;
+  margin: auto;
+  margin-top: 44px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
-
+.alert{
+  font-size: 30px;
+  font-weight: lighter;
+}
 .successful {
-  width: 45%;
-  background-color: var(--green-color);
+  width: 70%;
+  background-color: var(--light-green);
   margin: auto;
   margin-top: 10%;
-  padding: 1.2rem 1.5rem;
-  color: var(--white);
+  padding: 1.2rem 1.8rem;
+  color: #28bc28;
   border-radius: 0.6rem;
+  font-size: 18px;
 }
 .unsuccessful {
-  width: 45%;
+  width: 60%;
   margin: auto;
   margin-top: 10%;
-  padding: 1.2rem 1.5rem;
-  color: var(--white);
+  padding: 1.2rem 1.8rem;
+  color: rgb(222, 62, 62);
   border-radius: 0.6rem;
-  background-color: rgb(222, 62, 62);
+  background-color: rgb(230, 165, 165);
+  font-size: 18px;
 }
 .alt {
-  margin-left: 9.4rem;
+  margin:auto;
   margin-top: 5%;
+  color: var(--pink);
+}
+.danger{
   color: var(--pink);
 }
 a {
@@ -146,6 +155,12 @@ a {
   height: 30px;
   animation: spin 2s linear infinite;
 }
+textarea{
+  width: 30rem;
+ height: 80px;
+ resize: none;
+ margin: 10px 0;
+}
 
 @keyframes spin {
   0% {
@@ -155,24 +170,19 @@ a {
     transform: rotate(360deg);
   }
 }
-.pattern {
-  position: absolute;
-  top: 150px;
-  left: 320px;
-}
 @media (max-width: 640px) {
   form {
     width: 70%;
   }
-  .heading {
-    margin-left: -10px;
-  }
+  
 }
+
+
+
 @media (max-width: 600px) {
   form {
-    width: 60%;
-    flex-direction: column;
-    padding-left: 15px;
+    width: 74%;
+    padding: 20px 25px;
   }
   .form-center {
     margin-left: 0px;
