--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@
 }
 :root {
   --grey: #b8b7bc;
+  --orange: #fa8e3f;
+
   --dark-blue: #020125;
   --green-color: #014e56;
   --light-green: #aeefae;
@@ -26,11 +28,13 @@ h3,
   font-weight: 700;
   font-size: 64px;
 }
-h4,p{
+h4,
+p {
   font-size: 16px;
   color: var(--white);
 }
-form, .text-input {
+form,
+.text-input {
   width: max-content;
   background-color: var(--green-color);
   display: flex;
@@ -61,18 +65,15 @@ input {
   font-size: 0.94rem;
   padding: 0.5rem 0.8rem;
   font-weight: 600;
-  line-height: 1.56rem;
+  /* line-height: 1.56rem; */
 
   letter-spacing: -0.115385px;
   height: 17px;
   border: none;
-  
 }
 input:focus {
   border: 1px solid white;
-  border: none;
   outline: none;
-  color: var(--white);
 }
 .input-container {
   margin-top: 54px;
@@ -81,7 +82,8 @@ input:focus {
 label {
   color: var(--white);
 }
-.form-group-first,.form-group-last {
+.form-group-first,
+.form-group-last {
   margin-top: 54px;
 }
 
@@ -100,9 +102,10 @@ label {
   cursor: pointer;
   margin: auto;
   margin-top: 44px;
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
-.alert{
+.alert {
   font-size: 30px;
   font-weight: lighter;
 }
@@ -127,11 +130,11 @@ label {
   font-size: 18px;
 }
 .alt {
-  margin:auto;
+  margin: auto;
   margin-top: 5%;
   color: var(--pink);
 }
-.danger{
+.danger {
   color: var(--pink);
 }
 a {
@@ -155,11 +158,11 @@ a {
   height: 30px;
   animation: spin 2s linear infinite;
 }
-textarea{
+textarea {
   width: 30rem;
- height: 80px;
- resize: none;
- margin: 10px 0;
+  height: 80px;
+  resize: none;
+  margin: 10px 0;
 }
 
 @keyframes spin {
@@ -174,10 +177,7 @@ textarea{
   form {
     width: 70%;
   }
-  
 }
-
-
 
 @media (max-width: 600px) {
   form {
