--- a/src/App.css
+++ b/src/App.css
@@ -33,29 +33,32 @@ p {
   font-size: 16px;
   color: var(--white);
 }
-form,
-.text-input {
+form {
   width: max-content;
-  background-color: var(--green-color);
+  /* background-color: var(white); */
   display: flex;
   flex-direction: column;
-  height: 100%;
-  margin: auto;
-  margin-top: 40px;
-  padding: 20px 50px;
+  /* padding: 20px 50px; */
+ 
+}
+.card{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   border-radius: 0.6rem;
   box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.2);
 }
-.form-center {
+/* .form-center {
   margin-left: 20px;
-}
+} */
 label {
   font-weight: 700;
   margin-right: 0.6rem;
   color: var(--dark-blue);
 }
 .heading {
-  color: var(--white);
+  color: var(--dark-green);
   margin: auto;
 }
 h2 {
@@ -65,22 +68,24 @@ input {
   font-size: 0.94rem;
   padding: 0.5rem 0.8rem;
   font-weight: 600;
-  /* line-height: 1.56rem; */
 
   letter-spacing: -0.115385px;
-  height: 17px;
+  height: 37px;
+  background-color: whitesmoke;
   border: none;
 }
 input:focus {
   border: 1px solid white;
   outline: none;
 }
-.input-container {
-  margin-top: 54px;
-  overflow-x: hidden;
+.input-container,
+.text-input {
+  display: flex;
+  flex-direction: column;
+  margin-top: 34px;
 }
 label {
-  color: var(--white);
+  color: var(--green-color);
 }
 .form-group-first,
 .form-group-last {
@@ -88,7 +93,7 @@ label {
 }
 
 .btn {
-  color: var(--dark-green);
+  color: var(--white);
   padding: 0.6rem 2rem;
 
   font-family: Livvic;
@@ -97,13 +102,14 @@ label {
   line-height: 28px;
   letter-spacing: 0px;
 
-  background: var(--white);
-  border-radius: 24px;
+  background: var(--dark-green);
+  border-radius: 14px;
   cursor: pointer;
   margin: auto;
   margin-top: 44px;
+  border: none;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
-    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+     var(--green-color) 0px -3px 0px inset;
 }
 .alert {
   font-size: 30px;
