--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ h3,
 .heading {
   color: var(--dark-blue);
   font-weight: 700;
-  font-size: 64px;
+  font-size: 50px;
 }
 h4,
 p {
@@ -35,11 +35,8 @@ p {
 }
 form {
   width: max-content;
-  /* background-color: var(white); */
   display: flex;
-  flex-direction: column;
-  /* padding: 20px 50px; */
- 
+  flex-direction: column; 
 }
 .card{
   position: absolute;
@@ -48,18 +45,21 @@ form {
   transform: translate(-50%, -50%);
   border-radius: 0.6rem;
   box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 0 50px 20px 50px;
 }
-/* .form-center {
-  margin-left: 20px;
-} */
+
 label {
   font-weight: 700;
   margin-right: 0.6rem;
   color: var(--dark-blue);
 }
 .heading {
-  color: var(--dark-green);
+  color: var(--white);
   margin: auto;
+  background-color: #004047;
+  padding: 0 30px;
+  border-bottom-left-radius: 14px;
+  border-bottom-right-radius: 14px;
 }
 h2 {
   margin: auto;
@@ -73,10 +73,14 @@ input {
   height: 37px;
   background-color: whitesmoke;
   border: none;
+  color: var(--dark-green);
 }
 input:focus {
-  border: 1px solid white;
+  border: 1px solid var(--dark-green);
   outline: none;
+}
+input::placeholder{
+  font-size: 0.6rem;
 }
 .input-container,
 .text-input {
@@ -179,18 +183,4 @@ textarea {
     transform: rotate(360deg);
   }
 }
-@media (max-width: 640px) {
-  form {
-    width: 70%;
-  }
-}
 
-@media (max-width: 600px) {
-  form {
-    width: 74%;
-    padding: 20px 25px;
-  }
-  .form-center {
-    margin-left: 0px;
-  }
-}
