--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ form {
   transform: translate(-50%, -50%);
   border-radius: 0.6rem;
   box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.2);
-  padding: 0 50px 20px 50px;
+  padding: 0 3rem 1.25rem 3rem;
 }
 
 label {
@@ -103,7 +103,7 @@ input:not(:focus):not(:placeholder-shown):valid{
   font-weight: 600;
   line-height: 28px;
 
-  border-radius: 14px;
+  border-radius: 0.875rem;
   cursor: pointer;
   margin: auto;
   margin-top: 1.8rem;
@@ -118,12 +118,12 @@ input:not(:focus):not(:placeholder-shown):valid{
   font-size: 0.6rem;
   font-weight: 400;
   letter-spacing: 0.1rem;
-  border-radius: 24px;
+  border-radius: 1.5rem;
 }
 .normal{
   padding: 0.5rem 1.8rem;
   font-size: 1.125rem;
-  border-radius: 24px;
+  border-radius: 1.5rem;
   font-weight: 600;
   letter-spacing: 0.1rem;
   font-style: normal;
