--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ h3,
 .heading {
   color: var(--dark-blue);
   font-weight: 700;
-  font-size: 2.75rem;
+  font-size: 1.9rem;
 }
 h4,
 p {
@@ -60,8 +60,10 @@ label {
   color: var(--white);
   margin: auto;
   background-color: #004047;
-  border-bottom-left-radius: 14px;
-  border-bottom-right-radius: 14px;
+  border-bottom-left-radius: 0.875rem;
+  border-bottom-right-radius: 0.875rem;
+  text-align: center;
+  padding: 0.88rem 0;
 }
 h2 {
   margin: auto;
@@ -81,21 +83,30 @@ input {
 input::placeholder{
   font-size: 0.6rem;
 }
-
-input:focus:invalid {
-  outline: 2px solid var(--pink);
-}
+/* input:focus:valid {
+  outline: 2px solid var(--light-green);
+} */
 
 input:not(:focus):not(:placeholder-shown):invalid {
   outline: 2px solid var(--pink);
 }
-input:focus:valid {
-  outline: 2px solid var(--light-green);
+input:focus:invalid {
+  outline: 2px solid var(--pink);
 }
+
 input:not(:focus):not(:placeholder-shown):valid{
   outline: 2px solid var(--light-green);
 }
-
+span{
+  color: var(--pink);
+  display: none;
+}
+input:focus:invalid ~ span{
+  display: block;
+}
+input:not(:focus):not(:placeholder-shown):invalid ~ span{
+  display: block;
+}
  button {
   color: var(--white);
   font-family: Livvic;
@@ -158,8 +169,7 @@ input:not(:focus):not(:placeholder-shown):valid{
   width: 70%;
   background-color: var(--light-green);
   margin: auto;
-  margin-top: 10%;
-  padding: 1.2rem 1.8rem;
+  padding: 1.2rem 1.4rem;
   color: #28bc28;
   border-radius: 0.6rem;
   font-size: 1.125rem;
@@ -167,8 +177,7 @@ input:not(:focus):not(:placeholder-shown):valid{
 .unsuccessful {
   width: 60%;
   margin: auto;
-  margin-top: 10%;
-  padding: 1.2rem 1.8rem;
+  padding: 1.2rem 1.4rem;
   color: rgb(222, 62, 62);
   border-radius: 0.6rem;
   background-color: rgb(230, 165, 165);
@@ -183,12 +192,6 @@ input:not(:focus):not(:placeholder-shown):valid{
   color: var(--pink);
 }
 
-/* input:empty{
-  outline: none;
-}
-input:invalid {
-  outline: 2px solid var(--pink);
-} */
 a {
   text-decoration: none;
   color: var(--orange-color);
