--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,9 @@
 
   --dark-blue: #020125;
   --green-color: #014e56;
-  --light-green: #aeefae;
   --pink: #f67e7e;
-  --white: #ffffff;
+  --white: #fff;
   --dark-green: #004047;
-  --light-navy: #487074;
-
 }
 body {
   max-width: 100vw;
@@ -25,36 +22,31 @@ body {
 h1,
 h2,
 h3,
+h4,
 .heading {
   color: var(--dark-blue);
   font-weight: 700;
-  font-size: 2.75rem;
-}
-h4,
-p {
-  font-size: 1rem;
-  color: var(--white);
-}
-form {
-  width: max-content;
-  display: flex;
-  flex-direction: column; 
-}
-.card{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 0.6rem;
-  box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.2);
-  padding: 0 3rem 1.25rem 3rem;
+  font-size: 64px;
 }
 
+form {
+  width: max-content;
+  background-color: var(--green-color);
+  display: flex;
+  height: 100%;
+  margin: auto;
+  margin-top: 40px;
+  padding: 20px 50px;
+  border-radius: 0.6rem;
+  box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.2);
+}
+.form-center {
+  margin-left: 20px;
+}
 label {
   font-weight: 700;
-  margin-bottom: 0.2rem;
-  margin-top: 1.8rem;
-  color: var(--green-color);
+  margin-right: 0.6rem;
+  color: var(--dark-blue);
 }
 .heading {
   color: var(--white);
@@ -63,143 +55,88 @@ label {
   border-bottom-left-radius: 14px;
   border-bottom-right-radius: 14px;
 }
+
 h2 {
   margin: auto;
 }
-
 input {
   font-size: 0.94rem;
   padding: 0.5rem 0.8rem;
   font-weight: 600;
+  font-style: italic;
+  line-height: 1.56rem;
 
   letter-spacing: -0.115385px;
-  height: 37px;
-  background-color: whitesmoke;
-  border: none;
-  color: var(--dark-green);
-}
-input::placeholder{
-  font-size: 0.6rem;
-}
-
-input:focus:invalid {
-  outline: 2px solid var(--pink);
-}
-
-input:not(:focus):not(:placeholder-shown):invalid {
-  outline: 2px solid var(--pink);
-}
-input:focus:valid {
-  outline: 2px solid var(--light-green);
-}
-input:not(:focus):not(:placeholder-shown):valid{
-  outline: 2px solid var(--light-green);
-}
-
- button {
   color: var(--white);
+  height: 17px;
+  border: none;
+  border-bottom: 1px solid var(--white);
+  background: none;
+}
+input:focus {
+  border: 1px solid white;
+  border: none;
+  border-bottom: 1px solid var(--pink);
+  outline: none;
+  color: var(--pink);
+}
+.input-container {
+  margin-top: 24px;
+}
+label {
+  color: var(--white);
+}
+.form-group-first {
+  margin-top: 40px;
+}
+.form-group-last {
+  margin-top: 40px;
+}
+.btn {
+  color: var(--dark-green);
+  padding: 0.6rem 2rem;
+
   font-family: Livvic;
-  
+  font-size: 1.1rem;
   font-weight: 600;
   line-height: 28px;
+  letter-spacing: 0px;
 
-  border-radius: 0.875rem;
+  background: var(--white);
+  border: 2px solid #ffffff;
+  border-radius: 24px;
   cursor: pointer;
-  margin: auto;
-  margin-top: 1.8rem;
-  
-} 
-.large{
-  padding: 0.6rem 2rem;
-  font-size: 1.1rem;
-}
-.small{
-  padding: 0.4rem 1.2rem;
-  font-size: 0.6rem;
-  font-weight: 400;
-  letter-spacing: 0.1rem;
-  border-radius: 1.5rem;
-}
-.normal{
-  padding: 0.5rem 1.8rem;
-  font-size: 1.125rem;
-  border-radius: 1.5rem;
-  font-weight: 600;
-  letter-spacing: 0.1rem;
-  font-style: normal;
+  margin-top: 24px;
 }
 
-.primary{
-  border: none;
-  background-color: var(--dark-green);
-  border-top: 2px solid var(--light-navy);
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
-     var(--green-color) 0px -3px 0px inset;
-
-}
-.secondary{
-  border: none;
-  background-color: white;
-  border-top: 2px solid var(--light-navy);
-  color: var(--dark-green);
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
-     var(--green-color) 0px -3px 0px inset;
-}
-.tertiary{
-  background-color: var(--pink);
-  border: 2.5px solid var(--light-navy);
-  color: var(--green-color);
-}
-.alert {
-  font-size: 1.88rem;
-  font-weight: lighter;
-}
 .successful {
-  width: 70%;
-  background-color: var(--light-green);
+  width: 45%;
+  background-color: var(--green-color);
   margin: auto;
   margin-top: 10%;
-  padding: 1.2rem 1.8rem;
-  color: #28bc28;
+  padding: 1.2rem 1.5rem;
+  color: var(--white);
   border-radius: 0.6rem;
-  font-size: 1.125rem;
 }
 .unsuccessful {
-  width: 60%;
+  width: 45%;
   margin: auto;
   margin-top: 10%;
-  padding: 1.2rem 1.8rem;
-  color: rgb(222, 62, 62);
+  padding: 1.2rem 1.5rem;
+  color: var(--white);
   border-radius: 0.6rem;
-  background-color: rgb(230, 165, 165);
-  font-size: 1.125rem;
+  background-color: rgb(222, 62, 62);
 }
 .alt {
-  margin: auto;
-  margin-top: 1.4rem;
+  margin-left: 9.4rem;
+  margin-top: 5%;
   color: var(--pink);
 }
-.danger {
-  color: var(--pink);
-}
-
-/* input:empty{
-  outline: none;
-}
-input:invalid {
-  outline: 2px solid var(--pink);
-} */
 a {
   text-decoration: none;
-  color: var(--orange-color);
+  color: var(--pink);
   font-size: 1.1rem;
   font-weight: medium;
-}
-.loader-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
 }
 
 .loader {
@@ -210,12 +147,6 @@ a {
   height: 30px;
   animation: spin 2s linear infinite;
 }
-textarea {
-  width: 30rem;
-  height: 80px;
-  resize: none;
-  margin: 0.625rem 0;
-}
 
 @keyframes spin {
   0% {
@@ -225,4 +156,26 @@ textarea {
     transform: rotate(360deg);
   }
 }
-
+.pattern {
+  position: absolute;
+  top: 150px;
+  left: 320px;
+}
+@media (max-width: 640px) {
+  form {
+    width: 70%;
+  }
+  .heading {
+    margin-left: -10px;
+  }
+}
+@media (max-width: 600px) {
+  form {
+    width: 60%;
+    flex-direction: column;
+    padding-left: 15px;
+  }
+  .form-center {
+    margin-left: 0px;
+  }
+}
