worked on the button component in the various form cards

--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -33,7 +33,7 @@
     background-color: var(--dark-green);  
   }
 .secondary{
-    border: none;
+    border: 2px solid var(--dark-green);
     background-color: white;
     color: var(--dark-green);
   }
