--- a/src/components/forms/forms.module.css
+++ b/src/components/forms/forms.module.css
@@ -2,10 +2,9 @@
     margin: auto;
     margin-top: 1.4rem;
     text-align: center;
+    color: var(--pink);
   }
-  .alt ~ a{
-    margin-top: 1.4rem;
-  }
+  
   :global form{
     margin-top: 2rem;
   }
