--- a/src/components/alert/alert.module.css
+++ b/src/components/alert/alert.module.css
@@ -12,7 +12,7 @@
     font-size: 1.125rem;
   }
 .unsuccessful {
-    width: 60%;
+    /* width: 60%; */
     margin: auto;
     padding: 1.2rem 1.4rem;
     color: rgb(222, 62, 62);
