--- a/src/components/alert/alert.module.css
+++ b/src/components/alert/alert.module.css
@@ -3,16 +3,15 @@
     font-weight: lighter;
   }
 .successful {
-    width: 70%;
-    background-color: var(--light-green);
+  
     margin: auto;
     padding: 1.2rem 1.4rem;
-    color: #28bc28;
+    color: #006700;
+    background-color:#b6fdb6;
     border-radius: 0.6rem;
     font-size: 1.125rem;
   }
 .unsuccessful {
-    /* width: 60%; */
     margin: auto;
     padding: 1.2rem 1.4rem;
     color: rgb(222, 62, 62);
