worked on the side bar

--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -24,3 +24,10 @@
     background-color: var(--pink);
     display: none;
 }
+
+@media (max-width:770px) {
+    .home, .contact{
+        display: none;
+    }
+    
+}
