--- a/src/pages/pages.module.css
+++ b/src/pages/pages.module.css
@@ -2,3 +2,13 @@
     width: 70%;
     margin: auto;
 }
+.closeIcon{
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding-left: 11.5rem;
+    padding-top: 0.5rem;
+    cursor: pointer;
+    z-index: 100;
+    color: white;
+}
