--- a/src/components/profile/profile.module.css
+++ b/src/components/profile/profile.module.css
@@ -1,17 +1,25 @@
 .profile{
-    display: flex;
-    align-items: center;
     cursor: pointer;
 }
-.profileHorizontalBar{
-    margin-top: 10px;
-    height: 3px;
-    background-color: var(--pink);
-    display: none;
-}
 .userAvatar{
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
-    border: 2px solid var(--dark-green);
-    height: 45px;
-    width: 2.5rem;
+    align-items: center;
+    justify-content: center;
+}
+.hoverCard{
+    padding: 2.5rem 1.5rem;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    position: absolute;
+    right: 7%;
+    top: 15%;
+}
+.hoverCard p{
+    margin: 2rem 2rem 1rem 0.5rem;
+    width: 100%;
+    
+}
+.username{
+    text-align: center;
 }
