--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -5,13 +5,14 @@
     font-weight: 600;
     line-height: 28px;
     cursor: pointer;
-    margin: auto;   
+    margin: auto;  
+    letter-spacing: 0.03rem; 
   }
  .large{
-    padding: 0.6rem 2rem;
     font-size: 1.1rem;
     width: 100%;
     border-radius: 0.5rem;
+    height: 64px;
   }
 .small{
     padding: 0.4rem 1.2rem;
