--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,14 +1,15 @@
 .navbar{
     position: fixed;
-    left: 20rem;
-    top: 40px;
-    height: 40px;
+    top: 0;
     width: 100%;
+    background-color: red;
+    padding: 2rem 0;
+    text-align: right;
     display: flex;
-    justify-content: space-between;
-}
-.home{
-    display: flex;
+    align-content: end;
+    
+    
+
 }
 
 .list{
