--- a/src/components/services/authLayout.module.css
+++ b/src/components/services/authLayout.module.css
@@ -1,10 +1,13 @@
 .card{
+    border-radius: 0.6rem;
+    box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.2);
+    padding: 1.25rem 3rem;
+    margin: auto;
+    width: 28rem;
+    max-width: 90%;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    border-radius: 0.6rem;
-    box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.2);
-    padding: 0 3rem 1.25rem 3rem;
   }
   
