--- a/src/pages/pages.module.css
+++ b/src/pages/pages.module.css
@@ -11,3 +11,20 @@
     z-index: 100;
     color: white;
 }
+.UnauthorizedPage{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+.UnauthorizedImg{
+    max-width: 100%;
+    max-height: 100%;
+}
+.UnauthorizedPage h2{
+    font-size: xx-large;
+    font-weight: 900;
+}
+.UnauthorizedText{
+    font-size: small;   
+}
