--- a/src/components/form/form.module.css
+++ b/src/components/form/form.module.css
@@ -1,67 +1,80 @@
-.mainForm{
-    display: flex;
-    margin: auto;
-    height: 50vh;
-    width: 70%;
-    justify-content: center;
-    align-content: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.mainForm {
+  display: flex;
+  margin: auto;
+  height: 100vh;
+  width: 70%;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
 }
-.form{
-    width: 14rem;
+.form {
+  width: 14rem;
+  align-content: center;
+  align-items: center;
+
 }
-.heading{
-    text-align: center;
+.heading {
+  text-align: center;
 }
-.input{
-    width: 100%;
-    height: 50px;
-    border: 1px solid gray;
-    margin: 10px 0;
-    padding: 1rem;
+.input {
+  width: 100%;
+  height: 50px;
+  border: 1px solid gray;
+  margin: 10px 0;
+  padding: 1rem;
 }
-.inputField{
-    margin: 20px 0;
+.inputField {
+  margin: 20px 0;
 }
-.input:not(:focus):not(:placeholder-shown):invalid {
-    outline: 2px solid var(--pink);
-}
+.input:not(:focus):not(:placeholder-shown):invalid,
 .input:focus:invalid {
-    outline: 2px solid var(--pink);
+  outline: 2px solid var(--pink);
+  border: none;
 }
-     
-.input:not(:focus):not(:placeholder-shown):valid{
-    outline: 2px solid var(--light-green);
+
+.input:not(:focus):not(:placeholder-shown):valid {
+  outline: 2px solid var(--light-green);
 }
-.formImg{
-    width: 20rem;
-    height: 100%;
+.formImg {
+  width: 20rem;
 }
-.firstInput{
-    margin-top: 0;
-    margin-bottom: 10px;
-    width: 100%;
-    height: 50px;
-    border: 1px solid gray;
-    padding: 1rem;
+.firstInput {
+  margin-top: 0;
+  margin-bottom: 10px;
+  width: 100%;
+  height: 50px;
+  border: 1px solid gray;
+  padding: 1rem;
 }
-.label{
-    font-weight: 600;
+.label {
+  font-weight: 600;
 }
-.eyeSlashInvisible, .eyeInvisible{
-    display: none;
+.eyeSlashInvisible,
+.eyeInvisible {
+  display: none;
 }
-.eyeSlashVisible, .eyevisible{
-    display: block;
+.eyeSlashVisible,
+.eyevisible {
+  display: block;
 }
-.eyeToggle{
-    color: var(--dark-green);
-    position: absolute;
-    align-items: center;
-    margin-top: 0.8rem;
-    margin-left: -1.4rem;
-    cursor: pointer;
+.eyeToggle {
+  color: var(--dark-green);
+  position: absolute;
+  align-items: center;
+  margin-top: 0.8rem;
+  margin-left: -1.4rem;
+  cursor: pointer;
 }
+.alert {
+  color: var(--pink);
+  display: none;
+}
+.input:focus:invalid ~ .alert,
+.input:not(:focus):not(:placeholder-shown):invalid ~ .alert {
+  display: block;
+  font-size: 0.7rem;
+}
+/* .input:not(:focus):not(:placeholder-shown):invalid ~ .alert {
+  display: block;
+  font-size: 0.7rem;
+} */
