--- a/src/components/services/authLayout.module.css
+++ b/src/components/services/authLayout.module.css
@@ -4,10 +4,14 @@
     padding: 1.25rem 3rem;
     margin: auto;
     width: 28rem;
-    max-width: 90%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    /* max-width: 90%;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
   }
   
