--- a/src/components/forms/forms.module.css
+++ b/src/components/forms/forms.module.css
@@ -1,9 +1,41 @@
-.alt {
-  margin: auto;
-  margin-top: 1.4rem;
-  text-align: center;
+.forms{
+    display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-
-.form {
-  margin-top: 2rem;
+.button{
+    margin-top: 30px;
+}
+.input{
+    padding-left: 0.37rem;
+    padding-right: 0.37rem;
+    width: 18.75rem;
+    height: 2.5rem;
+    margin-top: 1rem;
+    border-radius: 0.25rem;
+    border: 1px solid  #999999
+}
+.inputWrapper{
+    margin-top: 1.5rem;
+}
+.heading{
+    color: #1D2939;
+    font-size: 2.1rem;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 0.166px;
+    margin-right: 3rem;
+}
+.authOption{
+    color:  #A6A6A6;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 0.08px;
+    margin-top: 1.25rem;
+}
+.option{
+    color: #0267FF;
 }
