--- a/src/pages/pages.module.css
+++ b/src/pages/pages.module.css
@@ -1,33 +1,8 @@
-.main{
-    margin: auto;
-}
-.closeIcon{
-    position: fixed;
-    top: 0;
-    left: 0;
-    padding-left: 11.5rem;
-    padding-top: 0.5rem;
-    cursor: pointer;
-    z-index: 100;
-    color: white;
-}
-.UnauthorizedPage{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-}
-.UnauthorizedImg{
-    max-width: 100%;
-    max-height: 100%;
-}
-.UnauthorizedPage h2{
-    font-size: xx-large;
-    font-weight: 900;
-}
-.UnauthorizedText{
-    font-size: small;   
-}
-.formPage{
-    margin: 20vh 0;
+.authPage{
+    /* display: grid;
+    grid-template-columns: repeat(2, 1fr); */
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    overflow-x: hidden;
 }
