--- a/src/components/forms/forms.module.css
+++ b/src/components/forms/forms.module.css
@@ -1,41 +1,61 @@
-.forms{
-    display: flex;
+.forms {
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.button{
-    margin-top: 30px;
+.button {
+  margin-top: 30px;
 }
-.input{
-    padding-left: 0.37rem;
-    padding-right: 0.37rem;
-    width: 18.75rem;
-    height: 2.5rem;
-    margin-top: 1rem;
-    border-radius: 0.25rem;
-    border: 1px solid  #999999
+.input {
+  padding-left: 0.37rem;
+  padding-right: 0.37rem;
+  width: 18.75rem;
+  height: 2.5rem;
+  margin-top: 1rem;
+  border-radius: 0.25rem;
+  border: 1px solid #999999;
 }
-.inputWrapper{
-    margin-top: 1.5rem;
+.inputWrapper {
+  margin-top: 1.5rem;
 }
-.heading{
-    color: #1D2939;
-    font-size: 2.1rem;
-    font-weight: 700;
-    line-height: normal;
-    letter-spacing: 0.166px;
-    margin-right: 3rem;
+.heading {
+  color: #1d2939;
+  font-size: 2.1rem;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.166px;
+  margin-right: 3rem;
 }
-.authOption{
-    color:  #A6A6A6;
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    letter-spacing: 0.08px;
-    margin-top: 1.25rem;
+.authOption {
+  color: #a6a6a6;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.08px;
+  margin-top: 1.25rem;
 }
-.option{
-    color: #0267FF;
+.option {
+  color: #0267ff;
+}
+.mobileImg {
+  display: none;
+}
+@media (max-width: 780px) {
+  .forms {
+    width: 100% !important;
+    justify-content: start;
+  }
+  .mobileImg {
+    display: block;
+    margin-bottom: 1.25rem;
+    margin-top: 3rem;
+  }
+}
+@media (max-width: 310px) {
+  .heading {
+    margin-right: 0 !important;
+  }
+  
 }
