--- a/src/components/gallery/gallery.module.css
+++ b/src/components/gallery/gallery.module.css
@@ -1,16 +1,22 @@
-.gallery{
-    position: relative;
-    background: linear-gradient(0deg, #0267FF, #0267FF), linear-gradient(100.97deg, #6425D3 21.56%, #A259FF 84.43%), linear-gradient(103.38deg, #1275D0 26.38%, rgba(185, 38, 188, 0.46) 78.13%);
-    /* width: 50%; */
-
+.gallery {
+  position: relative;
+  background: linear-gradient(0deg, #0267ff, #0267ff),
+    linear-gradient(100.97deg, #6425d3 21.56%, #a259ff 84.43%),
+    linear-gradient(103.38deg, #1275d0 26.38%, rgba(185, 38, 188, 0.46) 78.13%);
+  /* width: 50%; */
 }
 .personImg {
-    position: absolute;
-    bottom: 0;
-    height: 95%;
+  position: absolute;
+  bottom: 0;
+  height: 95%;
 }
-.person{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.person {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+@media (max-width: 790px) {
+  .gallery {
+    display: none;
+  }
 }
