--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,7 +1,7 @@
 .navbar {
   display: flex;
   justify-content: space-between;
-  padding: 1rem 0.25rem;
+  padding: 1.5rem 0.8rem;
   background-color: #0000ff;
   border-bottom: 1px solid grey;
 }
@@ -13,4 +13,24 @@
 .proImg {
   border-radius: 50%;
   border: 1px solid red;
+}
+.dropdown {
+  position: absolute;
+  color: #344054;
+  height: 100vw;
+  margin-top: 2.8rem;
+  background-color: #ffffff;
+  padding: 0.5rem 4rem 1rem 1rem;
+  left: 0;
+}
+ul {
+  list-style: none;
+}
+.list {
+  list-style: none;
+  margin-top: 2rem;
+}
+.profile {
+  display: flex;
+  color: #ffffff;
 }
