--- a/src/components/buttons/button.module.css
+++ b/src/components/buttons/button.module.css
@@ -1,15 +1,33 @@
-.primary{
-    border-radius: 4px;
-    background: linear-gradient(0deg, #0267FF 0%, #0267FF 100%), linear-gradient(127deg, #6425D3 0%, #A259FF 100%), linear-gradient(0deg, #0267FF 0%, #0267FF 100%), linear-gradient(81deg, #1275D0 0%, #62AEF3 100%);
-    color: #FFFFFF;
-    border: none;
+.primary {
+  border-radius: 4px;
+  background: linear-gradient(0deg, #0267ff 0%, #0267ff 100%),
+    linear-gradient(127deg, #6425d3 0%, #a259ff 100%),
+    linear-gradient(0deg, #0267ff 0%, #0267ff 100%),
+    linear-gradient(81deg, #1275d0 0%, #62aef3 100%);
+  color: #ffffff;
+  border: none;
 }
-.large{
-    width: 18.75rem;
-    height: 2.5rem;
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    letter-spacing: 0.08px;
+.tertiary {
+  border-radius: 4px;
+  background: #ffffff;
+  color: #47515e;
+  border: 1px solid #000000;
+}
+.large {
+  width: 18.75rem;
+  height: 2.5rem;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.08px;
+}
+.medium {
+  width: 8.75rem;
+  height: 3rem;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.08px;
 }
