--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -4,35 +4,68 @@
   padding: 1.5rem 0.8rem;
   background-color: #0000ff;
   border-bottom: 1px solid grey;
+  align-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 .menubar {
   color: #ffffff;
   font-weight: 600;
   font-size: larger;
+ }
+.drawerWrapper{
+  width: 100%;
+  height: 116.4%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 40;
 }
-.proImg {
-  border-radius: 50%;
-  border: 1px solid red;
+.drawerBackground{
+  position: absolute;
+  left: 0;
 }
 .dropdown {
   position: absolute;
   color: #344054;
-  height: 100vw;
-  margin-top: 2.8rem;
+  height: 100vh;
+  top: 6.1rem;
   background-color: #ffffff;
+  opacity: 1;
   padding: 0.5rem 4rem 1rem 1rem;
-  left: 0;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  z-index: 41;
 }
 ul {
   list-style: none;
 }
 .list {
   list-style: none;
-  margin-top: 2rem;
+  margin-top: 4rem;
+  cursor: pointer;
+  width: max-content;
+}
+.list:hover{
+  background-color: #F2F2F2;
+  padding: 0.5rem;
+}
+.list1{
+  margin-top: 2rem !important;
 }
 .profile {
   display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
   color: #ffffff;
+}
+.userName{
+  text-transform: capitalize;
+  margin-right: 1rem;
 }
 .logo {
   color: #ffff;
@@ -41,4 +74,41 @@ ul {
   font-weight: 700;
   line-height: normal;
   letter-spacing: 0.115px;
+}
+.personAvatar{
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+}
+.informedBar{
+  display: flex;
+  justify-content: space-between;
+  padding: 1.5rem 1rem;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  color: #1D2939;
+font-family: Roboto;
+font-size: 1.2rem;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+letter-spacing: 0.3px;
+cursor: pointer;
+}
+.about{
+  display: flex;
+}
+.aboutPage{
+  margin-left: 1rem;
+}
+.close:hover{
+  background-color: #F2F2F2;
+}
+.settings{
+  position:absolute;
+  background-color: #ffffff;
+  padding: 1rem;
+  right: 0;
+  top: 10rem;
+  width: 40%;
+  z-index: 40;
 }
