--- a/src/components/forms/forms.module.css
+++ b/src/components/forms/forms.module.css
@@ -4,6 +4,22 @@
   align-items: center;
   justify-content: center;
 }
+.proImg{
+  margin-top: 20px;
+  border-radius: 50%;
+  position: relative;
+}
+.personAvatar{
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
+}
+.camera{
+  position: absolute;
+  left: 7.1rem;
+  top: 7.4rem;
+  color:#686868;
+}
 .button {
   margin-top: 30px;
 }
